# Cmap_remake_by_trae_cn

./: .gitignore  BUILD.md  CMakeLists.txt  ConceptMap.pro  PROJECT_SUMMARY.md  README.md
.trae/documents/: Qt 概念图软件开发计划.md
resources/icons/: icons.qrc
resources/styles/: academic_blue.json  nature_green.json  vibrant_orange.json
src/commands/: CMakeLists.txt  addedgecommand.cpp  addedgecommand.h  addnodecommand.cpp  addnodecommand.h  deleteedgecommand.cpp  deleteedgecommand.h  deletenodecommand.cpp  deletenodecommand.h  movenodecommand.cpp  movenodecommand.h
src/core/: CMakeLists.txt  conceptedge.cpp  conceptedge.h  conceptmap.cpp  conceptmap.h  conceptmapserializer.cpp  conceptmapserializer.h  conceptnode.cpp  conceptnode.h
src/graphics/: CMakeLists.txt  graphicsedge.cpp  graphicsedge.h  graphicsnode.cpp  graphicsnode.h  graphicsscene.cpp  graphicsscene.h  graphicsview.cpp  graphicsview.h
src/managers/: CMakeLists.txt  filemanager.cpp  filemanager.h  stylemanager.cpp  stylemanager.h
src/models/: CMakeLists.txt  edgemodel.cpp  edgemodel.h  mapmodel.cpp  mapmodel.h  nodemodel.cpp  nodemodel.h
src/ui/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  propertypanel.cpp  propertypanel.h  toolbar.cpp  toolbar.h
tests/: CMakeLists.txt
